--- a/countriesInfo.html
+++ b/countriesInfo.html
@@ -35,31 +35,30 @@
         <h1>Search Results</h1>
         <h2 id="countryName"></h2>
 
+    <br>
+
         <div>
             <!-- Table to Display Countries Information -->
             <table style="width:80%">
                 <tr>
-                    <label>Country Name:</label>
-                    <td id="countryName"></td>
+                    <td id="countryName">Country Name:</td>
                 </tr>
                 <tr>
-                    <label>Capital City:</label>
-                    <td id="capitalCity"></td>
+                    <td id="capitalCity">Capital City:</td>
                 </tr>
                 <tr>
-                    <label>Population:</label>
-                    <td id="population"></td>
+                    <td id="population">Population:</td>
                 </tr>
                 <tr>
-                    <label>Language(s):</label>
-                    <td id="language"></td>
+                    <td id="language">Language:</td>
                 </tr>
                 <tr>
-                    <label>Flag:</label>
-                    <td id="flag"></td>
+                    <td id="flag">Flag:</td>
                 </tr>
             </table>
         </div>
+        
+        <br>
         
 
         <!-- page footer containing text and links to external webpages-->
