--- a/countriesInfo.html
+++ b/countriesInfo.html
@@ -38,24 +38,8 @@
     <br>
 
         <div>
-            <!-- Table to Display Countries Information -->
-            <table style="width:80%">
-                <tr>
-                    <td id="countryName">Country Name:</td>
-                </tr>
-                <tr>
-                    <td id="capitalCity">Capital City:</td>
-                </tr>
-                <tr>
-                    <td id="population">Population:</td>
-                </tr>
-                <tr>
-                    <td id="language">Language:</td>
-                </tr>
-                <tr>
-                    <td id="flag">Flag:</td>
-                </tr>
-            </table>
+            <!-- Display Countries Information -->
+            <tbody id="countriesInfo"
         </div>
         
         <br>
