--- a/countriesInfo.html
+++ b/countriesInfo.html
@@ -39,7 +39,7 @@
 
         <div>
             <!-- Display Countries Information -->
-            <tbody id="countriesInfo"
+            <tbody id="countriesInfo"></tbody>
         </div>
         
         <br>
