--- a/countriesInfo.html
+++ b/countriesInfo.html
@@ -19,7 +19,7 @@
             
             <!-- Nav Bar -->
             <div class="navbar"> 
-                <a class="active" href="index.html"> Home </a>
+                <a href="index.html"> Home </a>
                 <a href="america.html"> America </a>
                 <a href="england.html"> England </a>
                 <a href="spain.html"> Spain </a>
