--- a/countriesInfo.html
+++ b/countriesInfo.html
@@ -9,7 +9,7 @@
 
     <!--link to CSS-->
      <link rel="stylesheet" href="styles.css"> 
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
      
      <title>Search Results</title>
     </head>
@@ -34,7 +34,7 @@
         <!-- Search Titles -->
         <h1>Search Results</h1>
 
-    <br>
+        <br>
 
         <div>
             <!-- Display Countries Information -->
