--- a/countriesInfo.html
+++ b/countriesInfo.html
@@ -36,27 +36,8 @@
 
     <br>
 
-    <div>
-        <!-- Display Countries Information -->
-        <table id="displayInfo">
-            <tbody>
-                <tr>
-                    <th>Country:</th>
-                </tr>
-                <tr>
-                    <th>Capital:</th>
-                </tr>
-                <tr>
-                    <th>Language(s):</th>
-                </tr>
-                <tr>
-                    <th>Population:</th>
-                </tr>
-                <tr>
-                    <th>Flag:</th>
-                </tr>
-            </tbody>
-        </table>
+    <div id="displayInfo">
+
     </div>
         
     <br>
