--- a/america.html
+++ b/america.html
@@ -51,6 +51,19 @@
         </div>
     </div>
     </main> 
+    <footer> 
+        <p> These are my picks for places to visit! <br>
+        For more information on each of these countries, please visit the following Wikipedia pages: </p>
 
+        <p class="wiki">
+            <a href="https://en.wikipedia.org/wiki/United_States"> America's Wikipedia Page</a>
+            <a href="https://en.wikipedia.org/wiki/England"> England's Wikipedia Page</a>
+            <a href="https://en.wikipedia.org/wiki/Spain"> Spain's Wikipedia Page</a>
+        </p>
+
+        <!--link to JavaScript file-->
+        <script src="Js.js"></script>
+    
+    </footer>
 </body>
 </html>
