--- a/countriesInfo.html
+++ b/countriesInfo.html
@@ -23,16 +23,16 @@
                 <a href="england.html"> England </a>
                 <a href="spain.html"> Spain </a>
                 
-                <div class="search-container">
-                        <input type="text" placeholder="Search..." id="search">
-                        <button type="submit" onclick="getData(baseUrl)">Go</button>
-                </div>
             </div>
         </header>
 
         <!-- Search Titles -->
-        <h1>Search Results</h1>
-
+        <h1>Search Countries</h1>
+        <br>
+        <div class="search-container">
+            <input type="text" placeholder="Search..." id="search">
+            <button type="submit" onclick="getData(baseUrl)">Go</button>
+        </div>
     <br>
 
     <div>
