--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
                 <a href="england.html"> England </a>
                 <a href="spain.html"> Spain </a>
                 
-                <div class="search-container">
-                        <input type="text" placeholder="Search..." id="search">
-                        <button type="submit" onclick="getData(baseUrl)">Go</button>
+                <div>
+                    <button id="searchCountries" type="submit" onclick="location.href='countriesInfo.html';">Search for Other Country Info</button>
                 </div>
             </div>
         </header>
