--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
                 <a href="america.html"> America </a>
                 <a href="england.html"> England </a>
                 <a href="spain.html"> Spain </a>
-                
-                <div>
-                    <button id="searchCountries" type="submit" onclick="location.href='countriesInfo.html';">Search for Other Country Info</button>
+
+
+                <div class="searchbtn">
+                    <button type="submit" onclick="location.href='countriesInfo.html';">Search for Other Country Info</button>
                 </div>
             </div>
+
+
         </header>
 
         <!-- main image on home page -->
