--- a/destinations.html
+++ b/destinations.html
@@ -5,16 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destinations</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Explore Holiday Destinations</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="destinations.html" class="active">Destinations</a></li>
-            </ul>
+        <nav class="navbar">
+            <div class="container-fluid">
+                <!-- Hamburger Menu Button -->
+                <button class="navbar-toggler custom-toggler" id="menuToggle">
+                    ☰ <!-- Unicode for the hamburger icon -->
+                </button>
+
+                <!-- Dropdown Menu -->
+                <div class="menu-content" id="navbarMenu">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="destinations.html">Destinations</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -59,6 +72,6 @@
         <p>© 2025 Travel Guide</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
