--- a/destinations.html
+++ b/destinations.html
@@ -8,14 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Explore Holiday Destinations</h1>
         <nav class="navbar">
             <div class="container-fluid">
                 <!-- Hamburger Menu Button -->
                 <button class="navbar-toggler custom-toggler" id="menuToggle">
                     ☰ <!-- Unicode for the hamburger icon -->
                 </button>
-
+                
+                 <!--Title-->
+                <h1 class="navbar-title">Explore Holiday Destinations</h1>
+            </div>
+    
                 <!-- Dropdown Menu -->
                 <div class="menu-content" id="navbarMenu">
                     <ul class="navbar-nav">
@@ -27,7 +30,6 @@
                         </li>
                     </ul>
                 </div>
-            </div>
         </nav>
     </header>
 
