--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <section>
         <p class="cta-text">
-            To discover more amazing destinations and vote for your favorite, 
+            To discover more amazing destinations and vote for your favourite, 
             <a href="destinations.html" class="cta-link">click here</a>.
         </p>
     </section>
