--- a/destinations.html
+++ b/destinations.html
@@ -37,7 +37,7 @@
         <strong>Explore the world's most fascinating countries!</strong><br>
         <br>
         On this page you can use the search bar to find any country, 
-        browse its Wikipedia page for more information, and vote for your favorite destinations.<br> 
+        browse its Wikipedia page for more information, and vote for your favourite destinations.<br> 
         <br>
         <em>The top-voted countries will be featured on the homepage</em>
     </p>    
